--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.FinalApp"
         tools:targetApi="31">
         <activity
+            android:name=".InformationPopUp"
+            android:exported="false" />
+        <activity
+            android:name=".InformationPupUp"
+            android:exported="false" />
+        <activity
             android:name=".InfoPopUp"
             android:exported="false" />
         <activity
